--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@keyv/sqlite": "^3.6.7",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.7.2",
+    "dotenv": "^16.0.3",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.1.2",
     "better-sqlite3-session-store": "^0.1.0",
