--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ SMTP_SERVER=smtp.example.com
 SMTP_PORT=587
 SMTP_USERNAME=your_smtp_username
 SMTP_PASSWORD=your_smtp_password
-SMTP_FROM_NAME=HydraPanel
+SMTP_FROM_NAME=Executorx Hosting Panel
 SMTP_FROM_ADDRESS=no-reply@example.com
 
 # Panel Configuration
-PANEL_NAME=HydraPanel
+PANEL_NAME=Executorx Hosting Panel
 BASE_URI=https://yourpanel.com
