--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-# SMTP Configuration
-SMTP_SERVER=smtp.example.com
-SMTP_PORT=587
-SMTP_USERNAME=your_smtp_username
-SMTP_PASSWORD=your_smtp_password
-SMTP_FROM_NAME=Executorx Hosting Panel
+# Gmail SMTP Configuration
+SMTP_SERVER=smtp.gmail.com
+SMTP_PORT=465
+SMTP_USERNAME=jhondrheydacudao0@gamil.com
+SMTP_PASSWORD=eroi aqke wkxb hsmw
+SMTP_FROM_NAME=Executorx Hosting Panel 
 SMTP_FROM_ADDRESS=no-reply@example.com
 
 # Panel Configuration
-PANEL_NAME=Executorx Hosting Panel
+PANEL_NAME=Executorx Hosting Panel 
 BASE_URI=https://yourpanel.com
